ProyectoIndividual/force-app/main/default/objects/Unit__c/fields/Content__c.field-meta.xml
<CustomField>
    <fullName>Content__c</fullName>
    <label>Content</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>