ProyectoIndividual/force-app/main/default/objects/Unit__c/fields/Module_Name__c.field-meta.xml
<CustomField>
    <fullName>Module_Name__c</fullName>
    <label>Module Name</label>
    <referenceTo>Module__c</referenceTo>
    <relationshipLabel>Units</relationshipLabel>
    <relationshipName>Units</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>